syntax = "proto3";

package MC.Login;

service MCLogin{
    rpc Login(MCLoginRequest) returns (MCLoginResponse);
    rpc Regist(MCRegistRequest) returns (MCRegistResponse);
}

//返回状态枚举类
enum MCResponseStatusCode {
    OK = 0;
    FAILED = 1;
    ERROR = 2;
}

enum UserStatType{
    ONLINE = 0;
    OFFLINE = 1;
}

message MCLoginRequest{
    string username = 1;
    string password = 2;
    UserStatType online_status = 3;
    string client_version = 4;
}

// 返回格式
message MCLoginResponse{
    MCResponseStatusCode code = 1;
    string err_msg = 2;
    uint32 user_id = 3;
    uint32 server_time = 4;
}

message MCRegistRequest{
    string username = 1;
    string password = 2;
    string nickname = 3;
    string email = 4;
}

// 返回格式
message MCRegistResponse{
    MCResponseStatusCode code = 1;
    string err_msg = 2;
}